welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:45: error: not found: value ymbole2
    ymbole2(Color.yellow)
    ^